@@ -13,6 +13,9 @@ public class FieldService {
 
     private final Map<Long, Map<String, Object>> fieldMeta = FieldConfig.getFieldMetadata();
 
+    /**
+     * Returns the hospital registration form blocks
+     */
     public List<FormBlock> getHospitalRegistrationForm() {
         List<FormBlock> formBlocks = new ArrayList<>();
 
@@ -26,16 +29,18 @@ public class FieldService {
             long mask = entry.getValue();
 
             List<FormField> fields = fieldMeta.entrySet().stream()
-                    .filter(e -> (e.getKey() & mask) != 0)
+                    .filter(e -> e.getKey() != null && (e.getKey() & mask) != 0)
                     .map(this::mapToFormField)
                     .collect(Collectors.toList());
 
-            Map<String, Boolean> sameMap = new HashMap<>();
-            for (FormField field : fields) {
-                if (field.getSameAsOrganizationSource() != null && field.getSameAsOrganizationTarget() != null) {
-                    sameMap.put(field.getSameAsOrganizationTarget(), false);
-                }
-            }
+            Map<String, Boolean> sameMap = fields.stream()
+                    .filter(f -> f.getSameAsOrganizationTarget() != null)
+                    .collect(Collectors.toMap(
+                            FormField::getSameAsOrganizationTarget,
+                            f -> false,
+                            (a, b) -> b,
+                            LinkedHashMap::new
+                    ));
 
             FormBlock block = new FormBlock();
             block.setBlockName(blockName);
@@ -49,33 +54,38 @@ public class FieldService {
         return formBlocks;
     }
 
+    /**
+     * Maps a FieldConfig entry to FormField object (null-safe)
+     */
     @SuppressWarnings("unchecked")
     private FormField mapToFormField(Map.Entry<Long, Map<String, Object>> entry) {
-        Map<String, Object> meta = entry.getValue();
+        Map<String, Object> meta = entry.getValue() != null ? entry.getValue() : Collections.emptyMap();
 
-        String key = (String) meta.get("key");
-        String label = (String) meta.get("label");
-        String type = (String) meta.get("type");
-        String path = (String) meta.get("path");
+        String key = (String) meta.getOrDefault("key", "");
+        String label = (String) meta.getOrDefault("label", "");
+        String type = (String) meta.getOrDefault("type", "text");
+        String path = (String) meta.getOrDefault("path", key);
         boolean required = Boolean.TRUE.equals(meta.get("required"));
         String placeholder = (String) meta.getOrDefault("placeholder", null);
-        List<String> options = (List<String>) meta.getOrDefault("options", List.of());
+        List<String> options = (List<String>) meta.getOrDefault("options", Collections.emptyList());
 
-        // Only keep extra metadata that is not part of standard fields
         Map<String, Object> extra = new LinkedHashMap<>(meta);
         extra.keySet().removeAll(Set.of("key", "label", "type", "path", "required", "placeholder", "options"));
 
         FormField field = new FormField(key, label, type, path, required, placeholder, options, extra);
 
-        // Only admin/personal fields get verifyButton or sameAsOrganization
-        if ("personal.email".equals(path)) {
-            field.setNote("Always use your personal email here");
-            field.setVerifyButton(true);
-            field.setSameAsOrganizationSource("organization.email");
-            field.setSameAsOrganizationTarget("personal.email");
-        } else if ("personal.mobile".equals(path)) {
-            field.setSameAsOrganizationSource("organization.mobile");
-            field.setSameAsOrganizationTarget("personal.mobile");
+        // Handle personal/admin fields with "Same as Organization"
+        switch (path) {
+            case "personal.email" -> {
+                field.setNote("Always use your personal email here");
+                field.setVerifyButton(true);
+                field.setSameAsOrganizationSource("organization.email");
+                field.setSameAsOrganizationTarget("personal.email");
+            }
+            case "personal.mobile" -> {
+                field.setSameAsOrganizationSource("organization.mobile");
+                field.setSameAsOrganizationTarget("personal.mobile");
+            }
         }
 
         return field;
